<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginFragment"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:id="@+id/phone_login"
    android:background="@color/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:id="@+id/r_top">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str1"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str2"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/r_top"
        android:id="@+id/r_text">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str3"
            android:textSize="36sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str4"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/r_text"
        android:layout_marginTop="30dp"
        android:padding="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str5"
            android:textSize="16sp"
            android:id="@+id/r_r_text"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:layout_below="@id/r_r_text"
            android:id="@+id/r_r_r">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:entries="@array/spingarr"
                android:gravity="center" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:inputType="phone"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/str6"
            android:textSize="24sp"
            android:id="@+id/get_ver_btn"
            android:background="@drawable/btn_shape"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_below="@id/r_r_r"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str7"
            android:background="#020305"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str8"
            android:background="#020305"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str9"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/l_btm">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_marginRight="50dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_marginRight="50dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
        </LinearLayout>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str10"
            android:textColor="@color/white"
            android:layout_below="@id/l_btm"
            />

    </RelativeLayout>



</RelativeLayout>