<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginQuickFragment"
    android:paddingTop="21dp"
    android:paddingBottom="44dp"
    android:id="@+id/quick_login"
    android:background="@drawable/z1761">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:id="@+id/u_top">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/z333"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="一键登录"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

        <ImageButton
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/z405"
            android:layout_toLeftOf="@id/l_p_topT"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str2"
            android:textSize="14sp"
            android:id="@+id/l_p_topT"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_below="@id/u_top"
        android:id="@+id/r_text">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str3"
            android:textSize="34sp"
            android:textColor="#F6E1CE"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str4"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:textColor="#BFF6E1CE"/>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="+86 18223345669"
            android:layout_below="@id/r_text"
            android:layout_marginTop="58dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/l_q_phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/l_q_phone"
        android:text="中国联通提供认证服务"
        android:textSize="14sp"
        android:id="@+id/l_q_centerText"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/z1964"
        android:layout_below="@id/l_q_centerText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:text="本机号码一键登录"/>


        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/z349"
            android:layout_alignParentBottom="true"
            android:id="@+id/l_p_btm_imgBtn"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我确认已阅读并同意《滔滔视频服务协议》《滔滔直播平台服务
协议》《隐私政策》以及《天翼账号服务与隐私协议》"
            android:textSize="10sp"
            android:layout_toRightOf="@id/l_p_btm_imgBtn"
            android:textColor="#80FFFFFF"
            android:layout_marginRight="43dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"/>



</RelativeLayout>