<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginVerifyFragment"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:id="@+id/verify_login"
    android:background="#020305">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:id="@+id/r_top">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="输入验证码"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str2"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/r_top"
        android:id="@+id/r_text">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str3"
            android:textSize="36sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str4"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="60dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@id/ver_input"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已发送验证码至"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone_ver"
                android:text="18223345669"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:id="@+id/ver_input">

            <EditText
                android:id="@+id/num_in1_et"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:background="#515256"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/num_in2_et"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="#515256"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/num_in3_et"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:background="#515256"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/num_in4_et"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="#515256"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/num_in5_et"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="#515256"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/num_in6_et"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="#515256"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="重新发送"
            android:id="@+id/ver_re_btn"
            android:background="@drawable/btn_shape"
            android:layout_below="@id/ver_input"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"/>
    </RelativeLayout>
</RelativeLayout>